Dependpency bump for clojurescript
Signed-off-by: Peter Schuck <peter@bendyworks.com>